--- a/assepts/css/style.css
+++ b/assepts/css/style.css
@@ -704,6 +704,7 @@ width: 360px;
 border: none;
 font: 400 16px 'Poppins', sans-serif;}
 
+
 textarea {resize: none;
 height: 204px;
 width: 750px;
@@ -712,7 +713,7 @@ font: 400 16px 'Poppins', sans-serif;
 padding: 19px;
 border: none;}
 
-button[type="submit"] {border-radius: 40px;
+.btnSubmit {border-radius: 40px;
 background: #fc5f45;
 color: #fff;
 text-transform: uppercase;
@@ -725,7 +726,7 @@ cursor: pointer;
 transition: all .3s;
 font: 600 16px 'Poppins', sans-serif;}
 
-button[type="submit"]:hover {opacity: .5;}
+.btnSubmit:hover {opacity: .5;}
 
 
 
